[tool.poetry]
name = "ics2mattermost"
version = "0.1.0"
description = ""
authors = ["Adrien Di Pasquale <adrien.di_pasquale@beta.gouv.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ics = "^0.7"
requests = "^2.27.1"
click = "^8.1.2"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
